fixed resizing bug in tortas

--- a/tortas/index.html
+++ b/tortas/index.html
@@ -33,14 +33,16 @@
 
 
 <body>
-	<div class="one column" id="home">
-		<a href="..">dronfelipe</a>
-	</div>
 
 	<div class="container">
 
 		<div class="row nav-container">
-			<div class="five columns">
+
+			<div class="one column" id="home">
+				<a href="..">dronfelipe</a>
+			</div>
+
+			<div class="four columns offset-by-one">
 				<h2 class="menu-name">
 
 				</h2>
@@ -56,7 +58,7 @@
 					<input class="u-full-width" type="number" value="3" min="1" max="5" id="num_ingredients" name="num_ingredients">
 				</div>
 
-				<div class="two columns">
+				<div class="one column">
 					<input class="button-primary button-in-line" type="submit" id="menu" value="menú">
 				</div>
 			</form>
@@ -66,14 +68,14 @@
 
 		<div class="row content">
 
-			<div class="five columns offset-by-one menu" id='menu-column-one'>
+			<div class="four columns offset-by-two menu" id='menu-column-one'>
 				<ul class='menu-items'>
 					<!-- insert first half of menu here -->
 
 				</ul>
 			</div>
 
-			<div class="five columns menu" id='menu-column-two'>
+			<div class="four columns menu" id='menu-column-two'>
 				<ul class='menu-items'>
 					<!-- insert second half of menu here -->
 
