--- a/__partials/license.html
+++ b/__partials/license.html
@@ -1,6 +1,6 @@
-<footer style="text-align:center; margin-top:3em;">
+<footer>
 
-  <p style="font-size: .8em;">
+  <p>
     <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />All of the posts and code on this site are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
   </p>
 
