--- a/__partials/navbar-left.html
+++ b/__partials/navbar-left.html
@@ -5,5 +5,5 @@
 
 
 	<ul class="nav navbar-nav navbar-left">
-	  <li><a href=".." id="home">dronfelipe</a></li>
+	  <li><a href="/" id="home">dronfelipe</a></li>
 	</ul>
