Changed CV and about, removed typo in automating_development

--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -33,7 +33,7 @@
     Objective
   </div>
   <div class="header-caption">
-    Full stack web or mobile application engineer
+    Full stack web or mobile application engineer, full time or freelance
   </div>
 
 </header>
@@ -45,7 +45,11 @@
   </div>
 
   <p class="category">
-    <span class="slug">Web</span>React, React Native, jQuery, Django, Sinatra. Wrote centralized user manager to enable SSO and permission management for all of OPI’s applications (Django). Worked on OPI’s data warehouse API, implementing authorization and logging systems for flagship application (Sinatra). Designed and wrote all layers of Intelligent Billing web application for AutoFacil (LAMP). Wrote application for <a href="http://www.dronfelipe.com/posts/clustering_location_history">clustering Google location history records</a>, finding frequently visited locations, and responding to time-sensitive queries about a user’s location history via the Google Maps API.
+    <span class="slug">Web</span>React, React Native, jQuery, Django, Sinatra. Wrote centralized user manager to enable SSO and permission management for all of OPI’s applications (Django). Worked on OPI’s data warehouse API, implementing authorization and logging systems for flagship application (Sinatra). Designed and wrote all layers of Intelligent Billing web application for <a href="http://www.grupoautofacil.com/">AutoFacil</a>. Wrote application for <a href="http://www.dronfelipe.com/posts/clustering_location_history">clustering Google location history records</a>, finding frequently visited locations, and responding to time-sensitive queries about a user’s location history via the Google Maps API.
+  </p>
+
+  <p class="category">
+    <span class="slug">Python</span>Wrote a <a href="https://github.com/kylebebak/search_engine">search engine</a> that builds and queries an inverted index for a corpus of documents, all persisted in Redis. Wrote a cool <a href="https://github.com/kylebebak/py-geohash-any">geohashing package</a> downloadable via PyPI. Have worked on various Sublime Text plugins, for example <a href="https://github.com/kylebebak/auto-save">auto-save</a>, which allows you to auto-save one or more files every time they are changed. Combined with <a href="https://github.com/hiddentao/gulp-server-livereload">gulp-server-livereload</a>, and <a href="https://github.com/pwlmaciejewski/markdown-html">markdown-html</a> if I'm writing Markdown, it's how I write HTML, including this page.
   </p>
 
   <p class="category">
@@ -53,15 +57,11 @@
   </p>
 
   <p class="category">
-    <span class="slug">Java</span>Wrote back end of OXXO loss prevention application with JDBC to process > 1bn transactional records monthly, using discrete event simulation to implement a moving window to flag and prevent suspicious transactions.
+    <span class="slug">Java</span>Wrote back end of OXXO loss prevention application with JDBC to process > 1bn transactional records monthly, using <a href="http://www.dronfelipe.com/posts/events_moving_window">discrete event simulation</a> to implement a moving window to flag and prevent suspicious transactions.
   </p>
 
   <p class="category">
-    <span class="slug">Python</span>Wrote a search engine that builds and queries an inverted index for a corpus of documents, all persisted in Redis (<a href="https://github.com/kylebebak/search_engine">https://github.com/kylebebak/search_engine</a>). Implemented locality sensitive hashing to find near-duplicates in a set of ~10 million documents for which pairwise comparison was not feasible. Have worked on various Sublime Text plugins, for example <a href="https://github.com/kylebebak/auto-save">auto-save</a>, which allows you to auto-save one or more files every time they are changed. Combined with <a href="https://github.com/hiddentao/gulp-server-livereload">gulp-server-livereload</a>, and <a href="https://github.com/pwlmaciejewski/markdown-html">markdown-html</a> if I'm writing Markdown, it's what I use to write all my HTML, including this page.
-  </p>
-
-  <p class="category">
-    <span class="slug">Visual/Numerical Programming</span>Flocking behavior and <a href="https://www.youtube.com/watch?v=-_JWAh0lP8Q">stochastic predator-prey dynamics</a>, discrete event simulation for Brownian motion, simulation of percolation in 2-D and 3-D lattices and analysis of their percolation thresholds, simulation of foam made of cohering bubbles, simulation of dispersal of hydrothermal vent species, space-filling and other algorithms for digital art.
+    <span class="slug">Visual/Numerical Programming</span>Flocking behavior and stochastic predator-prey dynamics, discrete event simulation for Brownian motion, simulation of percolation in 2-D and 3-D lattices and analysis of their percolation thresholds, digital art. <a href="http://www.dronfelipe.com/images">See here</a>.
   </p>
 
   <b>Links</b>
@@ -83,7 +83,7 @@
     <div style="clear:both;"></div>
   </div>
   <p class="begin-description">
-    Back-end: design and implementation of centralized user manager to enable SSO and permission management for all of OPI’s applications (Django). Worked on data API, implementing authorization and logging systems for flagship application (Sinatra).
+    Back end: design and implementation of centralized user manager to enable SSO and permission management for all of OPI’s applications (Django). Worked on data API, implementing authorization and logging systems for flagship application (Sinatra).
   </p>
 
   <div>
@@ -92,7 +92,7 @@
     <div style="clear:both;"></div>
   </div>
   <p class="begin-description">
-    Analytics engineer: wrote all layers, including ETL processes, for AutoFacil Intelligent Billing web application (LAMP). Wrote back end of OXXO loss prevention application using JDBC to process transactional records, using an event-driven simulation structure to implement a moving window to flag and prevent suspicious transactions. Worked on front and back end of application using data sets from INEGI to model viability of locations for new businesses.
+    Analytics engineer: wrote all layers, from ETL processes to front end SPA, for AutoFacil Intelligent Billing web application (LAMP + R + jQuery). Wrote back end of OXXO loss prevention application using JDBC to process transactional records, using an event-driven simulation structure to implement a moving window to flag and prevent suspicious transactions. Worked on front and back end of application using data sets from INEGI to model viability of locations for new businesses.
   </p>
   <p>
     ETL technical lead: designed multi-country data warehouse for Grupo Bimbo sales data. Oversaw development and coordinated dev team activities, oversaw deployment of code to QA and production environments.
@@ -115,9 +115,9 @@
   </div>
 
   <ul>
-    <li>Fluent in oral and written Spanish</li>
-    <li>Proven ability to explain complex and/or nuanced ideas</li>
-    <li>Extensive travel and living abroad has provided a framework for working well with people of varying backgrounds</li>
+    <li>Fluent in spoken and written Spanish</li>
+    <li>Proven ability to explain complex ideas</li>
+    <li>Experience working with people of varying backgrounds</li>
   </ul>
 
 </section>
