--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -12,20 +12,13 @@
   </div>
 
   <div>
-    <span class="align-left">13055 Hesby Street</span>
-    <span class="align-right">Ayuntamiento 48 int. 4 Col. Centro</span>
-    <div style="clear:both;"></div>
-  </div>
-
-  <div>
-    <span class="align-left">Los Angeles, CA, 91423 </span>
-    <span class="align-right">Delegación Cuauhtémoc CP 06200</span>
+    <span class="align-left">Oakland, CA</span>
+    <span class="align-right">CDMX, México</span>
     <div style="clear:both;"></div>
   </div>
 
   <div>
     <span class="align-left">kylebebak@gmail.com</span>
-    <span class="align-right">55 3437 0002</span>
     <div style="clear:both;"></div>
   </div>
 
