complete got rid of posts, posts now live entirely on static gh-pages site

--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -60,6 +60,7 @@
   <b>Links</b>
   <ul>
     <li><a href="http://www.dronfelipe.com/">www.dronfelipe.com</a></li>
+    <li><a href="http://kylebebak.github.io/posts/">Posts</a></li>
     <li><a href="https://github.com/kylebebak">Github</a></li>
   </ul>
 </section>
