--- a/html/__partials/license.html
+++ b/html/__partials/license.html
@@ -1,7 +1,7 @@
 <footer>
 
   <p>
-    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />All of the posts and code on this site are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    All of the posts and code on this site are licensed under the terms of the <a rel="license" href="https://opensource.org/licenses/MIT">MIT License</a>.
   </p>
 
 </footer>
