--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -23,10 +23,10 @@
   </div>
 
   <div class="header">
-    Objective
+    What I do
   </div>
   <div class="header-caption">
-    Full stack web or mobile application engineer, full time or freelance
+    CTO, full stack web and mobile engineer
   </div>
 
 </header>
@@ -38,11 +38,11 @@
   </div>
 
   <p class="category">
-    <span class="slug">Web</span>React, React Native, jQuery, Django, Sinatra. Wrote centralized user manager to enable SSO and permission management for all of OPI’s applications (Django). Worked on OPI’s data warehouse API, implementing authorization and logging systems for flagship application (Sinatra). Designed and wrote all layers of Intelligent Billing web application for <a href="http://www.grupoautofacil.com/">AutoFacil</a>. Wrote application for <a href="http://www.dronfelipe.com/posts/clustering_location_history">clustering Google location history records</a>, finding frequently visited locations, and responding to time-sensitive queries about a user’s location history via the Google Maps API.
+    <span class="slug">Web</span>Multiple cross-platform mobile applications using React Native. Web APIs with Django and DRF. Web apps with Django and jQuery. Wrote application for <a href="http://www.dronfelipe.com/posts/clustering_location_history">clustering Google location history records</a>, finding frequently visited locations, and responding to time-sensitive queries about a user’s location history via the Google Maps API. Google later released a very similar app called "timeline".
   </p>
 
   <p class="category">
-    <span class="slug">Python</span>Wrote a <a href="https://github.com/kylebebak/search_engine">search engine</a> that builds and queries an inverted index for a corpus of documents, all persisted in Redis. Wrote a cool <a href="https://github.com/kylebebak/py-geohash-any">geohashing package</a> downloadable via PyPI. Have worked on various Sublime Text plugins, for example <a href="https://github.com/kylebebak/auto-save">auto-save</a>, which allows you to auto-save one or more files every time they are changed. Combined with <a href="https://github.com/hiddentao/gulp-server-livereload">gulp-server-livereload</a>, and <a href="https://github.com/pwlmaciejewski/markdown-html">markdown-html</a> if I'm writing Markdown, it's how I write HTML, including this page.
+    <span class="slug">Python</span>Wrote some cool packages downloadable via PyPI: <a href="https://github.com/kylebebak/py-geohash-any">py-geohash-any</a>, <a href="https://github.com/kylebebak/questionnaire">questionnaire</a>. Wrote a <a href="https://github.com/kylebebak/search_engine">search engine</a> that builds and queries an inverted index for a corpus of documents, all persisted in Redis. Have worked on various Sublime Text plugins, for example <a href="https://github.com/kylebebak/auto-save">auto-save</a>, which allows you to auto-save one or more files every time they are changed. Combined with <a href="https://github.com/hiddentao/gulp-server-livereload">gulp-server-livereload</a>, and <a href="https://github.com/pwlmaciejewski/markdown-html">markdown-html</a> if I'm writing Markdown, it's how I write HTML, including this page.
   </p>
 
   <p class="category">
@@ -50,7 +50,7 @@
   </p>
 
   <p class="category">
-    <span class="slug">Java</span>Wrote back end of OXXO loss prevention application with JDBC to process > 1bn transactional records monthly, using <a href="http://www.dronfelipe.com/posts/events_moving_window">discrete event simulation</a> to implement a moving window to flag and prevent suspicious transactions.
+    <span class="slug">Java</span>Wrote back end of OXXO loss prevention application with JDBC to process > 1bn transactional records monthly, using <a href="http://kylebebak.github.io/post/counting-events-in-a-moving-window">discrete event simulation</a> to implement a moving window to flag and prevent suspicious transactions.
   </p>
 
   <p class="category">
@@ -70,6 +70,17 @@
   <div class="section-header">
     Work
   </div>
+
+  <div>
+    <span class="align-left"><b>CTO, Asistia, Mexico City</b></span>
+    <span class="align-right">Februaru 2016 – Present</span>
+    <div style="clear:both;"></div>
+  </div>
+  <p class="begin-description">
+    I coordinate all development activities. I teach and inspire our developers. I put all of our server infrastructure under Ansible, which makes deployment a breeze. I built our web API with DRF, and built our nurse and client mobile applications with React Native. I highly recommend both framworks.
+
+    I write most of our core APIs. I'm also heavily involved in product and UX design.
+  </p>
 
   <div>
     <span class="align-left"><b>Senior Engineer, OPI, Mexico City</b></span>
@@ -110,6 +121,7 @@
 
   <ul>
     <li>Fluent in spoken and written Spanish</li>
+    <li>Proven ability to coordinate and inspire teams of developers</li>
     <li>Proven ability to explain complex ideas</li>
     <li>Experience working with people of varying backgrounds</li>
   </ul>
@@ -136,7 +148,7 @@
   </p>
 
   <p>
-    While an undergraduate, designed and built a hardware random number generator by amplifying Johnson noise in a high-resistance circuit and assisted in the design and construction of a machine that took hundreds of close up, high-resolution photographs of root systems being studied by UCSB biologists, and automatically archived the images.
+    As an undergraduate, worked on team that designed and built a machine that took hundreds of close up, high-resolution photographs of root systems being studied by UCSB biologists, and automatically archived the images.
   </p>
 
 </section>
@@ -163,7 +175,7 @@
 
   <ul>
     <li>
-      Eduardo Mancera, Head of Product Team, OPI, Mexico City
+      Eduardo Mancera, Head of Product, OPI, Mexico City
       <div>
         <span class="align-left"><a href="mailto:eduardo@opi.la">eduardo@opi.la</a></span>
         <span class="align-right"><b>+52 (55) 1292 9190</b></span>
