Changes to resume

--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -38,7 +38,7 @@
   </div>
 
   <p class="category">
-    <span class="slug">Web</span>Multiple cross-platform mobile applications using React Native. Web APIs with Django and DRF. Web apps with Django and jQuery. Wrote application for <a href="http://www.dronfelipe.com/posts/clustering_location_history">clustering Google location history records</a>, finding frequently visited locations, and responding to time-sensitive queries about a user’s location history via the Google Maps API. Google later released a very similar app called "timeline".
+    <span class="slug">Web</span>Cross-platform mobile applications using React Native. Web APIs with Django and DRF. Web apps with Django and jQuery. A couple of years ago I wrote an application for <a href="http://www.dronfelipe.com/posts/clustering_location_history">clustering Google location history records</a>, finding frequently visited locations, and responding to time-sensitive queries about a user’s location history via the Google Maps API. Google later released a very similar app called "timeline"...
   </p>
 
   <p class="category">
@@ -77,9 +77,10 @@
     <div style="clear:both;"></div>
   </div>
   <p class="begin-description">
-    I coordinate all development activities. I teach and inspire our developers. I put all of our server infrastructure under Ansible, which makes deployment a breeze. I built our web API with DRF, and built our nurse and client mobile applications with React Native. I highly recommend both framworks.
-
-    I write most of our core APIs. I'm also heavily involved in product and UX design.
+    I coordinate development activities, and I teach and motivate our developers.
+  </p>
+  <p>
+    I put our server infrastructure and configuration under Ansible, which makes deployment a breeze. I built our web API with DRF, and built our nurse and client mobile applications with React Native. I highly recommend both framworks. I write most of our core APIs. I'm also heavily involved in product design and UX.
   </p>
 
   <div>
@@ -121,7 +122,7 @@
 
   <ul>
     <li>Fluent in spoken and written Spanish</li>
-    <li>Proven ability to coordinate and inspire teams of developers</li>
+    <li>Proven ability to lead and inspire teams of developers</li>
     <li>Proven ability to explain complex ideas</li>
     <li>Experience working with people of varying backgrounds</li>
   </ul>
