--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -42,7 +42,7 @@
   </p>
 
   <p class="category">
-    <span class="slug">Python</span>Wrote some cool packages downloadable via PyPI: <a href="https://github.com/kylebebak/py-geohash-any">py-geohash-any</a>, <a href="https://github.com/kylebebak/questionnaire">questionnaire</a>. Wrote a <a href="https://github.com/kylebebak/search_engine">search engine</a> that builds and queries an inverted index for a corpus of documents, all persisted in Redis. Have worked on various Sublime Text plugins, for example <a href="https://github.com/kylebebak/auto-save">auto-save</a>, which allows you to auto-save one or more files every time they are changed. Combined with <a href="https://github.com/hiddentao/gulp-server-livereload">gulp-server-livereload</a>, and <a href="https://github.com/pwlmaciejewski/markdown-html">markdown-html</a> if I'm writing Markdown, it's how I write HTML, including this page.
+    <span class="slug">Python</span>Wrote some cool packages downloadable via PyPI: <a href="https://github.com/kylebebak/py-geohash-any">py-geohash-any</a>, <a href="https://github.com/kylebebak/questionnaire">questionnaire</a>. Wrote a <a href="https://github.com/kylebebak/search_engine">search engine</a> that builds and queries an inverted index for a corpus of documents, all persisted in Redis. Have worked on various Sublime Text plugins, for example <a href="https://github.com/kylebebak/auto-save">auto-save</a>, which allows you to auto-save one or more files every time they are changed, and <a href="https://github.com/kylebebak/Requester">Requester</a>, an HTTP client built on top of the well-known <a href="http://docs.python-requests.org/en/master/">Requests</a> library.
   </p>
 
   <p class="category">
@@ -59,9 +59,9 @@
 
   <b>Links</b>
   <ul>
-    <li><a href="http://www.dronfelipe.com/">www.dronfelipe.com</a></li>
     <li><a href="http://kylebebak.github.io/posts/">Posts</a></li>
     <li><a href="https://github.com/kylebebak">Github</a></li>
+    <li><a href="http://www.dronfelipe.com/">www.dronfelipe.com</a></li>
   </ul>
 </section>
 
