--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -8,7 +8,7 @@
 <header>
 
   <div class="header">
-    Kyle J. Bebak
+    Kyle Bebak
   </div>
 
   <div>
@@ -38,30 +38,25 @@
   </div>
 
   <p class="category">
-    <span class="slug">Web</span>Cross-platform mobile applications using React Native. Web APIs with Django and DRF. Web apps with Django and jQuery. A couple of years ago I wrote an application for <a href="http://www.dronfelipe.com/posts/clustering_location_history">clustering Google location history records</a>, finding frequently visited locations, and responding to time-sensitive queries about a user’s location history via the Google Maps API. Google later released a very similar app called "timeline"...
+    <span class="slug">Web and Mobile</span>Cross-platform mobile applications using React Native. Lots of web APIs with Django and DRF, Node.js. Slick SPAs with React. Check out <a href="https://app.brigada.mx">Brigada</a>, a platform to coordinate/document reconstruction efforts after Mexico's big earthquakes in September 2017. Honorable mention: in 2014 I wrote an app that <a href="http://kylebebak.github.io/post/clustering-location-history-records">clusters Google location history records</a>, finds frequently visited locations, and responds to time-sensitive queries about a user's location history via. A year later Google released Timeline.
   </p>
 
   <p class="category">
-    <span class="slug">Python</span>Wrote some cool packages downloadable via PyPI: <a href="https://github.com/kylebebak/py-geohash-any">py-geohash-any</a>, <a href="https://github.com/kylebebak/questionnaire">questionnaire</a>. Wrote a <a href="https://github.com/kylebebak/search_engine">search engine</a> that builds and queries an inverted index for a corpus of documents, all persisted in Redis. Have worked on various Sublime Text plugins, for example <a href="https://github.com/kylebebak/auto-save">auto-save</a>, which allows you to auto-save one or more files every time they are changed, and <a href="https://github.com/kylebebak/Requester">Requester</a>, an HTTP client built on top of the well-known <a href="http://docs.python-requests.org/en/master/">Requests</a> library.
+    <span class="slug">Python</span>Wrote some cool packages downloadable via PyPI, e.g. <a href="https://github.com/kylebebak/questionnaire">questionnaire</a>. Built various Sublime Text plugins, including <a href="http://requester.org">Requester</a>, an HTTP client built on top of the well-known <a href="http://docs.python-requests.org/en/master/">Requests</a> library.
   </p>
 
   <p class="category">
-    <span class="slug">Unix</span>Wrote shell scripts that launched and controlled Informatica processes for loading various Grupo Bimbo data warehouses. Have written various shell programs in Bash and Python, including <a href="https://github.com/kylebebak/notes">Notes</a>, a program for creating, organizing and editing notes from any directory, with tab completion and wildcard matching.
+    <span class="slug">Data</span>Wrote key ETL processes for Grupo Bimbo's (the world's largest baking company) transactional data warehouses. Wrote back end of OXXO (the largest chain of convenience stores in Mexico) loss prevention app to continually process transactional records (> 1bn new records per month), using <a href="http://kylebebak.github.io/post/counting-events-in-a-moving-window">discrete event simulation</a> to flag and prevent suspicious transactions.
   </p>
 
   <p class="category">
-    <span class="slug">Java</span>Wrote back end of OXXO loss prevention application with JDBC to process > 1bn transactional records monthly, using <a href="http://kylebebak.github.io/post/counting-events-in-a-moving-window">discrete event simulation</a> to implement a moving window to flag and prevent suspicious transactions.
-  </p>
-
-  <p class="category">
-    <span class="slug">Visual/Numerical Programming</span>Flocking behavior and stochastic predator-prey dynamics, discrete event simulation for Brownian motion, simulation of percolation in 2-D and 3-D lattices and analysis of their percolation thresholds, digital art. <a href="http://www.dronfelipe.com/images">See here</a>.
+    <span class="slug">Goofing Around</span><a href="https://www.youtube.com/watch?v=-_JWAh0lP8Q">Flocking behavior and stochastic predator-prey dynamics</a>, <a href="http://www.dronfelipe.com/images">digital art</a>.
   </p>
 
   <b>Links</b>
   <ul>
-    <li><a href="http://kylebebak.github.io/posts/">Posts</a></li>
-    <li><a href="https://github.com/kylebebak">Github</a></li>
-    <li><a href="http://www.dronfelipe.com/">www.dronfelipe.com</a></li>
+    <li><a href="http://kylebebak.github.io">Posts</a></li>
+    <li><a href="https://github.com/kylebebak">GitHub</a></li>
   </ul>
 </section>
 
@@ -72,24 +67,45 @@
   </div>
 
   <div>
-    <span class="align-left"><b>CTO, Asistia, Mexico City</b></span>
-    <span class="align-right">February 2016 – Present</span>
+    <span class="align-left"><b>CTO, Fortana</b></span>
+    <span class="align-right">November 2017 – Present</span>
     <div style="clear:both;"></div>
   </div>
   <p class="begin-description">
-    I coordinate development activities, and I teach and motivate our developers.
-  </p>
-  <p>
-    I put our server infrastructure and configuration under Ansible, which makes deployment a breeze. I built our web API with DRF, and built our nurse and client mobile applications with React Native. I highly recommend both framworks. I write most of our core APIs. I'm also heavily involved in product design and UX.
+    Build web and mobile apps to help our clients ship their MVPs and iterate towards product/market fit. <b>Speed, extensibility, quality (choose 3).</b>
   </p>
 
   <div>
-    <span class="align-left"><b>Senior Engineer, OPI, Mexico City</b></span>
+    <span class="align-left"><b>Software Engineer, Bright, SF/Mexico City</b></span>
+    <span class="align-right">April 2017 – November 2017</span>
+    <div style="clear:both;"></div>
+  </div>
+  <p class="begin-description">
+    Full stack engineering (Node.js/React/React Native), but mostly front end.
+  </p>
+  <p>
+    Built web and mobile apps, worked on API as part of Bright's three-person software team. GraphQL, Node.js, React and React Native. Built real-time web/mobile chat app.
+  </p>
+
+  <div>
+    <span class="align-left"><b>CTO, Asistia, Mexico City</b></span>
+    <span class="align-right">January 2016 – April 2017</span>
+    <div style="clear:both;"></div>
+  </div>
+  <p class="begin-description">
+    Led development and built out Asistia's tech until company was acquired.
+  </p>
+  <p>
+    Automated deployment and infrastructure; built web API with DRF; built nurse and client mobile applications with React Native; wrote most core APIs; heavily involved in product design and UX.
+  </p>
+
+  <div>
+    <span class="align-left"><b>Software Engineer, OPI, Mexico City</b></span>
     <span class="align-right">June 2015 – October 2015</span>
     <div style="clear:both;"></div>
   </div>
   <p class="begin-description">
-    Back end: design and implementation of centralized user manager to enable SSO and permission management for all of OPI’s applications (Django). Worked on data API, implementing authorization and logging systems for flagship application (Sinatra).
+    Back end: design and implementation of centralized user manager to enable SSO and permission management for all of OPI's applications (Django). Worked on data API, implementing authorization and logging systems for flagship application (Sinatra).
   </p>
 
   <div>
@@ -110,7 +126,7 @@
     <div style="clear:both;"></div>
   </div>
   <p class="begin-description">
-    Taught International Baccalaureate Mathematics Standard Level, Algebra II and Pre-Calculus at top preparatory high school in Mexico City. Collaborated with teachers to design course materials for Algebra II, IB Math SL. Prepared students for IB exams. As faculty sponsor, co-founded ASF’s chapter of Mu Alpha Theta, a U.S.-based math society, and ASF’s first math club.
+    Taught International Baccalaureate Mathematics Standard Level, Algebra II and Pre-Calculus at top preparatory high school in Mexico City. Collaborated with teachers to design course materials for Algebra II, IB Math SL. Prepared students for IB exams. As faculty sponsor, co-founded ASF's chapter of Mu Alpha Theta, a U.S.-based math society, and ASF's first math club.
   </p>
 </section>
 
@@ -122,9 +138,8 @@
 
   <ul>
     <li>Fluent in spoken and written Spanish</li>
-    <li>Proven ability to lead and inspire teams of developers</li>
+    <li>Proven ability to lead and inspire teams</li>
     <li>Proven ability to explain complex ideas</li>
-    <li>Experience working with people of varying backgrounds</li>
   </ul>
 
 </section>
@@ -147,11 +162,6 @@
     B.S. in Physics, Academic Honors in Physics<br>
     College of Creative Studies Undergraduate Physics Fellowship
   </p>
-
-  <p>
-    As an undergraduate, worked on team that designed and built a machine that took hundreds of close up, high-resolution photographs of root systems being studied by UCSB biologists, and automatically archived the images.
-  </p>
-
 </section>
 
 
@@ -176,10 +186,10 @@
 
   <ul>
     <li>
-      Eduardo Mancera, Head of Product, OPI, Mexico City
+      Steven Kabbes, CTO, Bright, San Francisco
       <div>
-        <span class="align-left"><a href="mailto:eduardo@opi.la">eduardo@opi.la</a></span>
-        <span class="align-right"><b>+52 (55) 1292 9190</b></span>
+        <span class="align-left"><a href="mailto:stevenkabbes@gmail.com">stevenkabbes@gmail.com</a></span>
+        <span class="align-right"><b>(217) 821 7043</b></span>
         <div style="clear:both;"></div>
       </div>
     </li>
