--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -100,24 +100,15 @@
   </p>
 
   <div>
-    <span class="align-left"><b>Software Engineer, OPI, Mexico City</b></span>
-    <span class="align-right">June 2015 – October 2015</span>
+    <span class="align-left"><b>Technical Lead (Analytics and ETL), Intellego, Mexico City</b></span>
+    <span class="align-right">October 2013 – October 2015</span>
     <div style="clear:both;"></div>
   </div>
   <p class="begin-description">
-    Back end: design and implementation of centralized user manager to enable SSO and permission management for all of OPI's applications (Django). Worked on data API, implementing authorization and logging systems for flagship application (Sinatra).
+    Wrote key ETL processes for Grupo Bimbo's (the world's largest baking company) transactional data warehouses. Wrote back end of OXXO (the largest chain of convenience stores in Mexico) loss prevention app to continually process transactional records (> 1bn new records per month), to flag and prevent suspicious transactions.
   </p>
-
-  <div>
-    <span class="align-left"><b>Analytics and ETL Engineer, Intellego, Mexico City</b></span>
-    <span class="align-right">October 2013 – May 2015</span>
-    <div style="clear:both;"></div>
-  </div>
   <p class="begin-description">
-    Analytics engineer: wrote all layers, from ETL processes to front end SPA, for AutoFacil Intelligent Billing web application (LAMP + R + jQuery). Wrote back end of OXXO loss prevention application using JDBC to process transactional records, using an event-driven simulation structure to implement a moving window to flag and prevent suspicious transactions. Worked on front and back end of application using data sets from INEGI to model viability of locations for new businesses.
-  </p>
-  <p>
-    ETL technical lead: designed multi-country data warehouse for Grupo Bimbo sales data. Oversaw development and coordinated dev team activities, oversaw deployment of code to QA and production environments.
+    Oversaw development and coordinated dev team (~10 people), oversaw deployment to QA and production.
   </p>
 
   <div>
@@ -126,7 +117,7 @@
     <div style="clear:both;"></div>
   </div>
   <p class="begin-description">
-    Taught International Baccalaureate Mathematics Standard Level, Algebra II and Pre-Calculus at top preparatory high school in Mexico City. Collaborated with teachers to design course materials for Algebra II, IB Math SL. Prepared students for IB exams. As faculty sponsor, co-founded ASF's chapter of Mu Alpha Theta, a U.S.-based math society, and ASF's first math club.
+    Taught IB Math Standard Level, Algebra II and Pre-Calculus at top preparatory high school in Mexico City. Collaborated with teachers to design course materials. Prepared students for IB exams. As faculty sponsor, co-founded ASF's chapter of Mu Alpha Theta, a U.S.-based math society, and ASF's first math club.
   </p>
 </section>
 
@@ -172,7 +163,7 @@
 
   <ul>
     <li>Code, logic, language</li>
-    <li>Music (e.g. the Grateful Dead), Books (e.g. Pedro Páramo)</li>
+    <li>Music (e.g. Thelonious Monk), Books (e.g. Philip Roth)</li>
     <li>Footie, biking, walking around</li>
   </ul>
 
@@ -194,10 +185,9 @@
       </div>
     </li>
     <li>
-      Victor Valenzuela, Technical Lead, Advanced Analytics Team, Intellego, Mexico City
+      Santiago Saviñón, Senior Seller Success Manager, Amazon, Mexico City
       <div>
-        <span class="align-left"><a href="mailto:vvalenzuela@intellego.com.mx">vvalenzuela@intellego.com.mx</a></span>
-        <span class="align-right"><b>+52 (55) 2724-7924</b></span>
+        <span class="align-right"><b>+52 (55) 9198 0890</b></span>
         <div style="clear:both;"></div>
       </div>
     </li>
