Replaces http to https for links to kylebebak.github.io

--- a/html/about/cv/index.html
+++ b/html/about/cv/index.html
@@ -38,7 +38,7 @@
   </div>
 
   <p class="category">
-    <span class="slug">Web and Mobile</span>Cross-platform mobile applications using React Native. Lots of web APIs with Django and DRF, Node.js. Slick SPAs with React. Check out <a href="https://app.brigada.mx">Brigada</a>, a platform to coordinate/document reconstruction efforts after Mexico's big earthquakes in September 2017. Honorable mention: in 2014 I wrote an app that <a href="http://kylebebak.github.io/post/clustering-location-history-records">clusters Google location history records</a>, finds frequently visited locations, and responds to time-sensitive queries about a user's location history via. A year later Google released Timeline.
+    <span class="slug">Web and Mobile</span>Cross-platform mobile applications using React Native. Lots of web APIs with Django and DRF, Node.js. Slick SPAs with React. Check out <a href="https://app.brigada.mx">Brigada</a>, a platform to coordinate/document reconstruction efforts after Mexico's big earthquakes in September 2017. Honorable mention: in 2014 I wrote an app that <a href="https://kylebebak.github.io/post/clustering-location-history-records">clusters Google location history records</a>, finds frequently visited locations, and responds to time-sensitive queries about a user's location history via. A year later Google released Timeline.
   </p>
 
   <p class="category">
@@ -46,7 +46,7 @@
   </p>
 
   <p class="category">
-    <span class="slug">Data</span>Wrote key ETL processes for Grupo Bimbo's (the world's largest baking company) transactional data warehouses. Wrote back end of OXXO (the largest chain of convenience stores in Mexico) loss prevention app to continually process transactional records (> 1bn new records per month), using <a href="http://kylebebak.github.io/post/counting-events-in-a-moving-window">discrete event simulation</a> to flag and prevent suspicious transactions.
+    <span class="slug">Data</span>Wrote key ETL processes for Grupo Bimbo's (the world's largest baking company) transactional data warehouses. Wrote back end of OXXO (the largest chain of convenience stores in Mexico) loss prevention app to continually process transactional records (> 1bn new records per month), using <a href="https://kylebebak.github.io/post/counting-events-in-a-moving-window">discrete event simulation</a> to flag and prevent suspicious transactions.
   </p>
 
   <p class="category">
@@ -55,7 +55,7 @@
 
   <b>Links</b>
   <ul>
-    <li><a href="http://kylebebak.github.io">Posts</a></li>
+    <li><a href="https://kylebebak.github.io">Posts</a></li>
     <li><a href="https://github.com/kylebebak">GitHub</a></li>
   </ul>
 </section>
